Azure (REST API) tab working. Fixed a lyrics response null issue. Code renaming.

--- a/CSharpWpfShazam.csproj
+++ b/CSharpWpfShazam.csproj
@@ -44,4 +44,10 @@
     </ApplicationDefinition>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AzureADClientSecret\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
