--- a/AzureADClientSecret/appsettings.json
+++ b/AzureADClientSecret/appsettings.json
@@ -3,7 +3,7 @@
   "TenantId": "1f9da468-6981-4c39-b973-95f255b8a3bd",
   "ClientId": "bb595d20-46bc-4015-a0fb-bce11437310c",
   "ClientSecret": "j8C8Q~Ubk-w6rGleepB~5jmrzRnF2B0UpmQbTdk7",
-  "RestApiEndpoint": "https://csharpwpfshazamwebapiservice.azurewebsites.net/songrepo",
+  "WebApiEndpoint": "https://csharpwpfshazamwebapiservice.azurewebsites.net/songrepo",
   "ResourceId": "api://8db25fc9-007a-4979-8514-582c76d4fdda/.default"
 }
   
